--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,8 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <build>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
+    </build>
 
 </project>
