--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,41 +10,18 @@ jobs:
     
     services:
       # Label used to access the service container
-      postgres:
-        # Docker Hub image
-        image: postgres
-        # Provide the password for postgres
-        env:
-          POSTGRES_PASSWORD: postgres
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          # Maps tcp port 5432 on service container to the host
-          - 5432:5432
       mysql:
-        image: mariadb
+        image: mysql:5.7
         env:
+          MYSQL_DATABASE: mysql
+          MYSQL_USER: junit-test
+          MYSQL_PASSWORD: junit-test
           MYSQL_ROOT_PASSWORD: root
 
         ports:
           - 3306:3306
 
     steps:
-      - name: Verify Postgres connection
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y postgresql-client
-          psql --host 127.0.0.1 --port 5432 --user=postgres -d postgres --command="SELECT VERSION()"
-        env:
-            PGPASSWORD: postgres
-      - name: Verify MySql connection
-        run: |
-          sudo apt-get install mysql-client
-          mysql --host=127.0.0.1 --user=root --password=root --execute="SHOW TABLES" information_schema
       - name: Checkout
         uses: actions/checkout@v3
 
