--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,7 @@ jobs:
 
         ports:
           - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - name: Checkout
@@ -36,6 +37,8 @@ jobs:
 
       - name: Test
         run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
+        env:
+          DB_PORT: ${{ job.services.mysql.ports[3306] }}
 
       - name: Report
         uses: dorny/test-reporter@v1
