--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,6 +23,10 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
+      - name: Verify MySql connection
+        run: |
+            sudo apt-get install mysql-client
+            mysql --host=127.0.0.1 --user=root --password=root --execute="SHOW TABLES" information_schema
       - name: Checkout
         uses: actions/checkout@v3
 
